fix scrollbar

--- a/workout-tracker/src/views/UserPage/UserPage.css
+++ b/workout-tracker/src/views/UserPage/UserPage.css
@@ -3,7 +3,6 @@
   position: fixed;
   bottom: 0;
   height: 94%;
-  overflow-x: hidden;
   z-index: -1;
 }
 
@@ -20,6 +19,8 @@
   margin: auto;
   padding: 24px 0px;
   flex: 7;
+  overflow-y: scroll;
+  height: 94%;
 }
 .nav-items {
   padding: 24px 0;
